2006-10-07  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* The Mana World.dev, tmw.cbp: Updated project files.

2006-10-03  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/graphics/sprites/item006.xml,
	data/graphics/sprites/item007.xml,
	data/graphics/sprites/item008.xml,
	data/graphics/sprites/item009.xml,
	data/graphics/sprites/item006.png,
	data/graphics/sprites/item007.png,
	data/graphics/sprites/item008.png,
	data/graphics/sprites/item009.png,
	data/graphics/sprites/item010.xml,
	data/graphics/sprites/item010.png: Removed empty frames from
	headgears.

2006-10-03  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* src/map.cpp, src/map.h, src/Makefile.am,
	src/resources/mapreader.cpp, src/resources/ambientoverlay.cpp,
	src/resources/ambientoverlay.h: Turned AmbientOverlay into a class.
	Cleaned up the associated code.

2006-10-01  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* tools/Purger.java: Added a tool to purge old accounts from eAthena's
	database files.

2006-10-01  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/game.cpp, src/gui/trade.cpp, src/gui/inventorywindow.cpp:
	Accepted patches by GDO and VictorSan that fix problems with hiding
	windows using h and problems with trade window positioning.

2006-09-38  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* src/map.cpp: Fix random crashes when map tiles are missing.

2006-09-28  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/graphics/maps/new_2-1.tmx.gz: Matt Howe fixed up cave map.

2006-09-26  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/graphics/maps/new_6-1.tmx.gz: Alderan fixed a map issue.

2006-09-25  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/graphics/sprites/hairstyle*.png,
	data/graphics/sprites/hairstyle*.xml, tools/Reorganize.java: Removed
	unused frames from the hairsets.
	* src/resources/image.h: Defined NO_SDL_GLEXT to prevent a
	redefinition when gl.h also tries to define OpenGL extensions (patch
	accepted from Rogier Polak).

2006-09-23  Bjørn Lindeijer  <bjorn@lindeijer.nl>
